--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "@material-tailwind/react": "^2.1.9",
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.7.3",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
     "react-icons": "^4.11.0",
+    "react-router-dom": "^6.23.0",
+    "sort-by": "^1.2.0",
     "tailwind-merge": "^2.0.0"
   },
   "devDependencies": {
